--- a/portfolio.html
+++ b/portfolio.html
@@ -12,168 +12,183 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
-    <header class="page-header">
-      <a href="./index.html" lang="en" class="logo"
-        >Web<span class="logo-studio">Studio</span></a
-      >
 
-      <nav>
-        <ul class="list">
-          <li class="site-nav"><a href="">Студія</a></li>
-          <li class="site-nav"><a href="./portfolio.html">Портфоліо</a></li>
-          <li class="site-nav"><a href="">Контакти</a></li>
-        </ul>
-      </nav>
 
-      <ul class="list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="link-header"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="link">
-          <a href="tel:+38096111111" class="link-header">+38 096 111 11 11</a>
-        </li>
-      </ul>
-    </header>
+ 
+<header class="page-header">
+  <div class="container-header" >
+     
+        <a href="./index.html" lang="en" class="logo"
+          >Web<span class="logo-studio">Studio</span></a>
 
-    <main>
-      <section>
-        <h1 hidden>Портфоліо</h1>
+<nav class="main-nav">
+    <ul class="site-nav">
+            <li class="item"><a href="" class="link">Студія</a></li>
+            <li class="item"><a href="./portfolio.html" class="link current">Портфоліо</a></li>
+            <li class="item"><a href="" class="link">Контакти</a></li>
+    </ul>
+  </nav>
 
-        <ul class="list">
-          <li><button type="button" class="btn-filtr">Усі</button></li>
-          <li><button type="button" class="btn-filtr">Веб-сайти</button></li>
-          <li><button type="button" class="btn-filtr">Додатки</button></li>
-          <li><button type="button" class="btn-filtr">Дизайн</button></li>
-          <li><button type="button" class="btn-filtr">Маркетинг</button></li>
-        </ul>
+    <ul class="main-contacts">
+          <li class="item"><a href="mailto:info@devstudio.com" class="link-header">info@devstudio.com</a></li>
+          <li class="item"><a href="tel:+38096111111" class="link-header">+38 096 111 11 11</a></li>
+   </ul>
+      </div>
+     
+</header>
 
-        <ul class="list">
-          <li class="new">
-            <a href="">
-              <img
-                src="./images/technocrack.jpg"
-                alt="Ноутбук з профілями трьох людей"
-                width="370"
-              />
-              <h2 class="work-title">Технокряк</h2>
-              <p class="work-description">Веб-сайт</p></a
-            >
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/new-orlean-vs-golden-star.jpg"
-                alt="Постер баскетбольна команда Новий Орлеан против баскетбольної команди Золота Зірка"
-                width="370"
-              />
-              <h2 class="work-title">
-                Постер <span lang="en">Orlean vs Golden Star </span>
-              </h2>
-              <p class="work-description">Дизайн</p></a
-            >
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/restaurant-seafood.jpg"
-                alt="Логотип ресторану Морська Їжа"
-                width="370"
-              />
-              <h2 class="work-title">
-                Ресторан <span lang="en">Seafood</span>
-              </h2>
-              <p class="work-description">Додаток</p></a
-            >
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/project-prime.jpg"
-                alt="Навушники"
-                width="370"
-              />
-              <h2 class="work-title">Проєкт <span lang="en">Prime</span></h2>
-              <p class="work-description">Маркетинг</p></a
-            >
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/project-boxes.jpg"
-                alt="Біла та коричнева коробки>"
-                width="370"
-              />
-              <h2 class="work-title">Проєкт <span lang="en">Boxes</span></h2>
-              <p class="work-description">Додаток</p></a
-            >
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/inspiration-has-no-borders.jpg"
-                alt="Монітор"
-                width="370"
-              />
-              <h2 class="work-title">
-                <span lang="en">Inspiration has no Borders</span>
-              </h2>
-              <p class="work-description">Веб-сайт</p></a
-            >
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/limited-edition.jpg"
-                alt="Журнал"
-                width="370"
-              />
-              <h2 class="work-title">
-                Видання <span lang="en">Limited Edition</span>
-              </h2>
-              <p class="work-description">Дизайнт</p></a
-            >
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/project-lab.jpg"
-                alt="Ярлик з літерами"
-                width="370"
-              />
-              <h2 class="work-title">Проєкт <span lang="en">LAB</span></h2>
-              <p class="work-description">Маркетинг</p></a
-            >
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/growing-business.jpg"
-                alt="Людина працює за ноутбуком"
-                width="370"
-              />
-              <h2 class="work-title">
-                <span lang="en">Growing Business</span>
-              </h2>
-              <p class="work-description">Додаток</p></a
-            >
-          </li>
-        </ul>
+
+
+<main>
+<section>
+   <div class="container">
+<h1 hidden>Портфоліо</h1>
+
+ <div class="btn-container">
+ <ul class="list-container">
+            <li><button type="button" class="btn-filtr">Усі</button></li>
+            <li><button type="button" class="btn-filtr">Веб-сайти</button></li>
+            <li><button type="button" class="btn-filtr">Додатки</button></li>
+            <li><button type="button" class="btn-filtr">Дизайн</button></li>
+            <li><button type="button" class="btn-filtr">Маркетинг</button></li>
+          </ul>
+ </div>
+
+</div class="container">
+    <ul class="flex-container">
+            <li class="flex-element">
+              <a href="">
+                <img
+                  src="./images/technocrack.jpg"
+                  alt="Ноутбук з профілями трьох людей"
+                  width="370"
+                />
+                <h2 class="work-title">Технокряк</h2>
+                <p class="work-description">Веб-сайт</p></a
+              >
+            </li>
+            <li class="flex-element">
+              <a href="">
+                <img
+                  src="./images/new-orlean-vs-golden-star.jpg"
+                  alt="Постер баскетбольна команда Новий Орлеан против баскетбольної команди Золота Зірка"
+                  width="370"
+                />
+                <h2 class="work-title">
+                  Постер <span lang="en">Orlean vs Golden Star </span>
+                </h2>
+                <p class="work-description">Дизайн</p></a
+              >
+            </li>
+            <li class="flex-element">
+              <a href="">
+                <img
+                  src="./images/restaurant-seafood.jpg"
+                  alt="Логотип ресторану Морська Їжа"
+                  width="370"
+                />
+                <h2 class="work-title">
+                  Ресторан <span lang="en">Seafood</span>
+                </h2>
+                <p class="work-description">Додаток</p></a
+              >
+            </li>
+            <li class="flex-element">
+              <a href="">
+                <img
+                  src="./images/project-prime.jpg"
+                  alt="Навушники"
+                  width="370"
+                />
+                <h2 class="work-title">Проєкт <span lang="en">Prime</span></h2>
+                <p class="work-description">Маркетинг</p></a
+              >
+            </li>
+            <li class="flex-element">
+              <a href="">
+                <img
+                  src="./images/project-boxes.jpg"
+                  alt="Біла та коричнева коробки>"
+                  width="370"
+                />
+                <h2 class="work-title">Проєкт <span lang="en">Boxes</span></h2>
+                <p class="work-description">Додаток</p></a
+              >
+            </li>
+            <li class="flex-element">
+              <a href="">
+                <img
+                  src="./images/inspiration-has-no-borders.jpg"
+                  alt="Монітор"
+                  width="370"
+                />
+                <h2 class="work-title">
+                  <span lang="en">Inspiration has no Borders</span>
+                </h2>
+                <p class="work-description">Веб-сайт</p></a
+              >
+            </li>
+            <li class="flex-element">
+              <a href="">
+                <img
+                  src="./images/limited-edition.jpg"
+                  alt="Журнал"
+                  width="370"
+                />
+                <h2 class="work-title">
+                  Видання <span lang="en">Limited Edition</span>
+                </h2>
+                <p class="work-description">Дизайнт</p></a
+              >
+            </li>
+            <li class="flex-element">
+              <a href="">
+                <img
+                  src="./images/project-lab.jpg"
+                  alt="Ярлик з літерами"
+                  width="370"
+                />
+                <h2 class="work-title">Проєкт <span lang="en">LAB</span></h2>
+                <p class="work-description">Маркетинг</p></a
+              >
+            </li>
+            <li class="flex-element">
+              <a href="">
+                <img
+                  src="./images/growing-business.jpg"
+                  alt="Людина працює за ноутбуком"
+                  width="370"
+                />
+                <h2 class="work-title">
+                  <span lang="en">Growing Business</span>
+                </h2>
+                <p class="work-description">Додаток</p></a
+              >
+            </li>
+          </ul>
+        </div>
+        </div>   
       </section>
     </main>
 
-    <footer>
+
+
+
+  
+  
+  
+
+    <footer class="footer-container">
+      <div class="container">
       <a href="./index.html" lang="en" class="logo"
-        >Web<span class="logo-studio">Studio</span></a
+        >Web<span class="logo-studio-footer">Studio</span></a
       >
       <address>
-        <ul class="list">
+        <ul class="list-footer">
           <li class="address-style"><p>м. Київ, пр-т Лесі Українки, 26</p></li>
-          <li>
+          <li >
             <a href="mailto:info@devstudio.com" class="link-footer"
-              >info@devstudio.com</a
-            >
+              >info@devstudio.com</a>
           </li>
           <li>
             <a href="tel:+38096111111" class="link-footer">+38 096 111 11 11</a>
@@ -181,5 +196,6 @@
         </ul>
       </address>
     </footer>
+    </div>
   </body>
 </html>
