--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
     <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+  />
+    <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
@@ -40,11 +44,11 @@
 
 
 <main>
-<section>
+<section class="main-list">
    <div class="container">
 <h1 hidden>Портфоліо</h1>
 
- <div class="btn-container">
+
  <ul class="list-container">
             <li><button type="button" class="btn-filtr">Усі</button></li>
             <li><button type="button" class="btn-filtr">Веб-сайти</button></li>
@@ -52,9 +56,9 @@
             <li><button type="button" class="btn-filtr">Дизайн</button></li>
             <li><button type="button" class="btn-filtr">Маркетинг</button></li>
           </ul>
- </div>
 
-</div class="container">
+
+
     <ul class="flex-container">
             <li class="flex-element">
               <a href="">
@@ -63,9 +67,10 @@
                   alt="Ноутбук з профілями трьох людей"
                   width="370"
                 />
+        <div class="description">
                 <h2 class="work-title">Технокряк</h2>
-                <p class="work-description">Веб-сайт</p></a
-              >
+                <p class="work-description">Веб-сайт</p></a>
+      </div>
             </li>
             <li class="flex-element">
               <a href="">
@@ -74,11 +79,13 @@
                   alt="Постер баскетбольна команда Новий Орлеан против баскетбольної команди Золота Зірка"
                   width="370"
                 />
+<div class="description">
                 <h2 class="work-title">
                   Постер <span lang="en">Orlean vs Golden Star </span>
                 </h2>
                 <p class="work-description">Дизайн</p></a
               >
+            </div>
             </li>
             <li class="flex-element">
               <a href="">
@@ -87,11 +94,13 @@
                   alt="Логотип ресторану Морська Їжа"
                   width="370"
                 />
+<div class="description">
                 <h2 class="work-title">
                   Ресторан <span lang="en">Seafood</span>
                 </h2>
                 <p class="work-description">Додаток</p></a
               >
+            </div>
             </li>
             <li class="flex-element">
               <a href="">
@@ -100,9 +109,11 @@
                   alt="Навушники"
                   width="370"
                 />
+ <div class="description">
                 <h2 class="work-title">Проєкт <span lang="en">Prime</span></h2>
                 <p class="work-description">Маркетинг</p></a
               >
+            </div>
             </li>
             <li class="flex-element">
               <a href="">
@@ -111,9 +122,11 @@
                   alt="Біла та коричнева коробки>"
                   width="370"
                 />
+<div class="description">
                 <h2 class="work-title">Проєкт <span lang="en">Boxes</span></h2>
                 <p class="work-description">Додаток</p></a
               >
+            </div>
             </li>
             <li class="flex-element">
               <a href="">
@@ -122,11 +135,13 @@
                   alt="Монітор"
                   width="370"
                 />
+  <div class="description">  
                 <h2 class="work-title">
                   <span lang="en">Inspiration has no Borders</span>
                 </h2>
                 <p class="work-description">Веб-сайт</p></a
               >
+            </div>
             </li>
             <li class="flex-element">
               <a href="">
@@ -135,11 +150,13 @@
                   alt="Журнал"
                   width="370"
                 />
+<div class="description">
                 <h2 class="work-title">
                   Видання <span lang="en">Limited Edition</span>
                 </h2>
-                <p class="work-description">Дизайнт</p></a
+                <p class="work-description">Дизайн</p></a
               >
+            </div>
             </li>
             <li class="flex-element">
               <a href="">
@@ -148,9 +165,11 @@
                   alt="Ярлик з літерами"
                   width="370"
                 />
+ <div class="description"> 
                 <h2 class="work-title">Проєкт <span lang="en">LAB</span></h2>
                 <p class="work-description">Маркетинг</p></a
               >
+            </div>
             </li>
             <li class="flex-element">
               <a href="">
@@ -159,15 +178,17 @@
                   alt="Людина працює за ноутбуком"
                   width="370"
                 />
+ <div class="description">
                 <h2 class="work-title">
                   <span lang="en">Growing Business</span>
                 </h2>
                 <p class="work-description">Додаток</p></a
               >
+            </div>
             </li>
           </ul>
         </div>
-        </div>   
+         
       </section>
     </main>
 
@@ -178,24 +199,18 @@
   
   
 
-    <footer class="footer-container">
-      <div class="container">
-      <a href="./index.html" lang="en" class="logo"
-        >Web<span class="logo-studio-footer">Studio</span></a
-      >
+    <footer class="footer">
+      <div class="footer-container">
+      <a href="./index.html" lang="en" class="logo-footer" >Web<span class="logo-studio-footer">Studio</span></a>
       <address>
         <ul class="list-footer">
-          <li class="address-style"><p>м. Київ, пр-т Лесі Українки, 26</p></li>
-          <li >
-            <a href="mailto:info@devstudio.com" class="link-footer"
-              >info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+38096111111" class="link-footer">+38 096 111 11 11</a>
-          </li>
+          <li> </li><a href=""  class="footer-address" >м. Київ, пр-т Лесі Українки, 26</a> </li>
+          <li> <a href="mailto:info@devstudio.com" class="footer-email" >info@devstudio.com</a> </li>
+          <li> <a href="tel:+38096111111" class="footer-phone">+38 096 111 11 11</a></li>
         </ul>
-      </address>
-    </footer>
-    </div>
+  </address>
+      </div>
+  </footer>
+
   </body>
 </html>
