--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
 
- <section class="section-general">
+ <section class="section-general-features">
   <div class="container">
         <h2 hidden class="features">Особливості</h2>
 
@@ -135,7 +135,7 @@
               alt="Фото Ігор Дем'яненко"
             />
             <div class="name-job">
-            <h4 class="team-name">Ігор Дем'яненко</h4>
+            <h3 class="team-name">Ігор Дем'яненко</h3>
             <p class="job-title">Product Designer</p>
           </div>
           </li>
@@ -143,7 +143,7 @@
           <li class="list-card">
             <img src="./images/olga.jpg" alt="Фото Ольга Рєпіна" width="270" />
             <div class="name-job">
-            <h4 class="team-name">Ольга Рєпіна</h4>
+            <h3 class="team-name">Ольга Рєпіна</h3>
             <p class="job-title">Frontend Developer</p>
           </div>
           </li>
@@ -155,7 +155,7 @@
               width="270"
             />
             <div class="name-job">
-            <h4 class="team-name">Микола Тарасов</h4>
+            <h3 class="team-name">Микола Тарасов</h3>
             <p class="job-title">Marketing</p>
           </div>
           </li>
@@ -167,7 +167,7 @@
               width="270"
             />
             <div class="name-job">
-            <h4 class="team-name">Михайло Єрмаков</h4>
+            <h3 class="team-name">Михайло Єрмаков</h3>
             <p class="job-title">UI Designer</p>
           </div>
           </li>
@@ -180,9 +180,9 @@
     <footer class="footer">
       <div class="footer-container">
       <a href="./index.html" lang="en" class="logo-footer" >Web<span class="logo-studio-footer">Studio</span></a>
-      <address>
+  <address>
         <ul class="list-footer">
-          <li> </li><a href=""  class="footer-address" >м. Київ, пр-т Лесі Українки, 26</a> </li>
+          <li> <a href=""  class="footer-address" >м. Київ, пр-т Лесі Українки, 26</a> </li>
           <li> <a href="mailto:info@devstudio.com" class="footer-email" >info@devstudio.com</a> </li>
           <li> <a href="tel:+38096111111" class="footer-phone">+38 096 111 11 11</a></li>
         </ul>
